[tool.poetry]
name = "poetry-tutorial"
version = "0.1.0"
description = ""
authors = ["Naloween <40539093+Naloween@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_tutorial"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^5.3"
pylint = "^2.15.3"
sphinx = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
